--- a/style.css
+++ b/style.css
@@ -16,18 +16,16 @@ main {
   background-repeat: no-repeat;
   background-size: contain;
   height: 100vh;
-  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
   max-width: 450px;
   height: 670px;
   background-color: white;
-  margin: auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin: 20px;
   border-radius: 18px;
   box-shadow: 0px 15px 30px 0px rgba(0, 0, 0, 0.2);
 }
@@ -181,5 +179,33 @@ h2 + p {
 @media screen and (max-width: 375px) {
   main {
     background-image: url(/images/pattern-background-mobile.svg);
+  }
+
+  .container {
+    height: 620px;
+  }
+
+  h1 {
+    margin-top: 30px;
+  }
+
+  .paragraph {
+    font-size: 15px;
+  }
+
+  .plan-card {
+    max-width: 90%;
+  }
+
+  .plan-image {
+    width: 30%;
+  }
+
+  .plan-type {
+    width: 45%;
+  }
+
+  .button {
+    width: 90%;
   }
 }
